--- a/views/layout.njk
+++ b/views/layout.njk
@@ -13,8 +13,8 @@
     <header>
         <div class="links">
             <a href="/"><img src="logo.png" alt="logo"></a>
-            <a href="/sobre">Sobre</a>
-            <a href="/receitas">Receitas</a>
+            <a href="/about">Sobre</a>
+            <a href="/recipes">Receitas</a>
         </div>
     </header>
 
