--- a/public/styles.css
+++ b/public/styles.css
@@ -56,7 +56,7 @@ header{
     grid-template-columns: 1fr 1fr;
     /* gap: 50px; */
     max-width: 940px;
-    margin: 0  auto;
+    margin: 0 auto 20px auto;
     
 }
 .texto-apresentacao{
@@ -259,4 +259,66 @@ footer{
 .erro p{
     font-family: var(--font-roboto-regular);
 
+}
+/* recipe */
+
+.recipe {
+    max-width: 940px;
+    margin: 0  auto;   
+}
+
+.recipe-title{
+    margin: 28px 0;
+    display: flex;
+}
+.recipe-title h1{
+    font-family: 'Roboto','Bold';
+    font-size: 24px;
+    color: #111111;
+}
+.more-infoIngredients, .more-infoPreparation, .more-infoInformation{
+    margin: auto 0 3px 7px;
+}
+.recipe-title p{
+    font-family: 'Roboto','Bold';
+    font-size: 12px;
+    color: #999999;
+    cursor: pointer;
+    
+}
+.recipe-img img{
+    border-radius: 15px;
+}
+
+.recipe-img-desc{
+    text-align: center;
+    margin: 24px 0;
+}
+.recipe-img-desc h1{
+    font-family: 'Roboto', bold;
+    font-size: 36px;
+    color: #111111;
+}
+.recipe-img-desc p{
+    font-family: var(--font-roboto-regular);
+    font-size: 20px;
+    color: #777777;
+}
+
+.recipe-ingredients, .recipe-preparation {
+    padding-left: 20px;
+    
+}
+.recipe-ingredients, .recipe-preparation, .recipe-information{
+    font-family: var(--font-roboto-regular);
+    font-size: 18px;
+    color: #444444;
+    line-height: 28px;
+
+    margin-bottom: 28px;
+}
+
+/* show hide */
+.hidden{
+    display: none;
 }
