--- a/views/layout.njk
+++ b/views/layout.njk
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    {% block head %}
-        <title>Foodfy</title>
+<head>
 
-    {% endblock head %}
-        <link rel="stylesheet" href="styles.css">
+{% block head %}
+    <title>Foodfy</title>
 
-    </head>
+{% endblock head %}
+    <link rel="stylesheet" href="/styles.css">
+
+</head>
 
 <body>
-    <header>
-        <div class="links">
-            <a href="/"><img src="logo.png" alt="logo"></a>
-            <a href="/about">Sobre</a>
-            <a href="/recipes">Receitas</a>
-        </div>
-    </header>
+<header>
+    <div class="links">
+        <a href="/"><img src="/logo.png" alt="logo"></a>
+        <a href="/about">Sobre</a>
+        <a href="/recipes">Receitas</a>
+    </div>
+</header>
 
 {% block content %}
 
 {% endblock content %}
 
-    <footer>
-        <div class="text-footer">
-            <p>Todos direitos reservados, receitas Foodfy.</p> 
-        </div>
-    </footer>
+<footer>
+    <div class="text-footer">
+        <p>Todos direitos reservados, receitas Foodfy.</p> 
+    </div>
+</footer>
 
 
 
